# crtls

./: .gitignore  .goreleaser.yml  Dockerfile  README.md  aciton.yml  gen_ca.py  gen_cert.py  go.mod  go.sum  main.go  main.py  pyproject.toml
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
cmd/: root.go  serve.go
cmd/ca/: generate.go
cmd/cert/: generate.go
cmd/scep/: serve.go
crtls/: common.py  main.py
internal/: generate.go  write.go
scripts/: completions.sh
