[tool.poetry]
name = "crtls"
version = "0.1.0"
description = ""
authors = ["Jens Langhammer <jens.langhammer@beryju.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
cryptography = "*"
click = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
