[project]
name = "crtls"
version = "0.1.0"
description = ""
authors = [
    { name = "Jens Langhammer" , email = "jens.langhammer@beryju.org"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
cryptography = "*"
click = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"

[project.scripts]
crtls = 'crtls.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
