[project]
name = "crtls"
version = "0.1.0"
description = ""
authors = [
    { name = "Jens Langhammer" , email = "jens.langhammer@beryju.org"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
cryptography = "*"
click = "*"
idna = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"

[project.scripts]
crtls = 'crtls.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
